# GrayScott

./: CMakeLists.txt  job.sh  job_nosbatch.sh
analysis/: analysis.cpp  analysis.h  isosurface_ds.cpp  reader.cpp  reader.h
cmake/Modules/: FindDataSpaces.cmake
plot/: vti_writer.cpp  vti_writer.hpp
simulation/: main.cpp  settings-files.json  writer.cpp  writer.h
